Fix message width on mobile

--- a/assets/stylesheets/index.sass
+++ b/assets/stylesheets/index.sass
@@ -7,6 +7,7 @@ body
     margin-top: 30vh
     font-weight: 300
     font-size: 3em
+    max-width: 80%
   .social-link
     a
       i
